# columba

./: .gitmodules  CMakeLists.txt  README.md  build_both_flavors_default.sh  build_script.sh  buildindex.cpp
cmake/: FindSDSL.cmake
example/: README.md
further_info/advanced_options/: README.md
further_info/result_reproduction/: README.md
result_reproduction/: README.md
search_schemes/: make_sub_folders.sh
search_schemes/01star0/6/: searches.txt
search_schemes/01star0/7/: searches.txt
search_schemes/01star0_adapted/2/: searches.txt
search_schemes/01star0_adapted/3/: searches.txt
search_schemes/01star0_adapted/6/: searches.txt
search_schemes/01star0_adapted/7/: searches.txt
search_schemes/kuch_k+1/4/: searches.txt
search_schemes/kuch_k+1_adapted/2/: searches.txt
search_schemes/kuch_k+1_adapted/4/: searches.txt
search_schemes/manbest/4/: searches.txt
search_schemes/multiple_opt/: name.txt
search_schemes/multiple_opt/4/: scheme1.txt
search_schemes/multiple_opt/6/: scheme1.txt  scheme2.txt
search_schemes/multiple_opt/individual_schemes/scheme1/: name.txt
search_schemes/multiple_opt/individual_schemes/scheme1/2/: searches.txt
search_schemes/multiple_opt/individual_schemes/scheme1/3/: searches.txt
search_schemes/multiple_opt/individual_schemes/scheme1/5/: searches.txt
search_schemes/multiple_opt/individual_schemes/scheme1/7/: searches.txt
search_schemes/multiple_opt/individual_schemes/scheme2/: name.txt
search_schemes/multiple_opt/individual_schemes/scheme2/2/: searches.txt
search_schemes/multiple_opt/individual_schemes/scheme2/4/: searches.txt
search_schemes/multiple_opt/individual_schemes/scheme3/: name.txt
search_schemes/multiple_opt/individual_schemes/scheme3/4/: searches.txt
search_schemes/multiple_opt/individual_schemes/scheme3/6/: searches.txt
search_schemes/multiple_opt/individual_schemes/scheme4/: name.txt
search_schemes/multiple_opt/individual_schemes/scheme4/6/: searches.txt
search_schemes/naive/: name.txt
search_schemes/naive/2/: searches.txt
search_schemes/naive/3/: searches.txt
search_schemes/naive/4/: searches.txt
search_schemes/naive/5/: searches.txt
search_schemes/pigeon/10/: searches.txt
search_schemes/pigeon/11/: searches.txt
search_schemes/pigeon/12/: searches.txt
search_schemes/pigeon/13/: searches.txt
search_schemes/pigeon/14/: searches.txt
search_schemes/pigeon/15/: searches.txt
search_schemes/pigeon/16/: searches.txt
search_schemes/pigeon/17/: searches.txt
search_schemes/pigeon/18/: searches.txt
search_schemes/pigeon/19/: searches.txt
search_schemes/pigeon/20/: searches.txt
search_schemes/pigeon/6/: searches.txt
search_schemes/pigeon/7/: searches.txt
search_schemes/pigeon/8/: searches.txt
search_schemes/pigeon/9/: searches.txt
search_schemes/pigeon_adapted/10/: searches.txt
search_schemes/pigeon_adapted/11/: searches.txt
search_schemes/pigeon_adapted/12/: searches.txt
search_schemes/pigeon_adapted/13/: searches.txt
search_schemes/pigeon_adapted/14/: searches.txt
search_schemes/pigeon_adapted/2/: searches.txt
search_schemes/pigeon_adapted/3/: searches.txt
search_schemes/pigeon_adapted/4/: searches.txt
search_schemes/pigeon_adapted/5/: searches.txt
search_schemes/pigeon_adapted/6/: searches.txt
search_schemes/pigeon_adapted/7/: searches.txt
search_schemes/pigeon_adapted/8/: searches.txt
search_schemes/pigeon_adapted/9/: searches.txt
search_schemes/suffix_filter/: name.txt
search_schemes/suffix_filter/10/: searches.txt
search_schemes/suffix_filter/11/: searches.txt
search_schemes/suffix_filter/12/: searches.txt
search_schemes/suffix_filter/13/: searches.txt
search_schemes/suffix_filter/2/: searches.txt
search_schemes/suffix_filter/3/: searches.txt
search_schemes/suffix_filter/4/: searches.txt
search_schemes/suffix_filter/5/: searches.txt
search_schemes/suffix_filter/6/: searches.txt
search_schemes/suffix_filter/7/: searches.txt
search_schemes/suffix_filter/8/: searches.txt
search_schemes/suffix_filter/9/: searches.txt
src/: alphabet.h  bandmatrix.h  bidirecfmindex.cpp  bidirecfmindex.h  bitparallelmatrix.cpp  bitparallelmatrix.h  bitvec.h  buildIndex.cpp  buildindex.cpp  bwtrepr.h  customtypedefs.cpp  customtypedefs.h  definitions.h  encodedtext.h  fastq.cpp  fastq.h  fmindex.cpp  fmindex.h  fmindexhelpers.cpp  fmindexhelpers.h  indexhelpers.cpp  indexhelpers.h  indexinterface.cpp  indexinterface.h  largeinteger.h  logger.cpp  logger.h  main.cpp  nucleotide.cpp  nucleotide.h  parallel.cpp  reads.h  search.cpp  search.h  searchstrategy.cpp  searchstrategy.h  seqfile.cpp  seqfile.h  sequential.cpp  substring.h  (+5 more)
src/bmove/: bmove.cpp  bmove.h  columba_build_pfp.sh  moverepr.cpp  moverepr.h  moverow.h  plcp.h  sparsebitvec.h
src/fmindex/: bwtrepr.h  encodedtext.h  fmindex.cpp  fmindex.h  suffixArray.h
src/parameters/: alignparameters.cpp  alignparameters.h  buildparameters.cpp  buildparameters.h  parameters.h
validitychecker/: README.md  validitychecker.py
